added list of todo component, used router to direct spesific component

--- a/frontend-todo/src/app/welcome/welcome.component.html
+++ b/frontend-todo/src/app/welcome/welcome.component.html
@@ -1,1 +1,7 @@
-Welcome {{name}}, this is your awesome website.
+<div>
+  Welcome {{name}}, this is your awesome website.
+</div>
+<div>
+  You can manage your todos <a routerLink="/todos">here</a>
+</div>
+
