--- a/frontend-todo/src/app/list-todos/list-todos.component.html
+++ b/frontend-todo/src/app/list-todos/list-todos.component.html
@@ -1,15 +1,21 @@
-<table border="1">
-  <caption>My Todo's</caption>
-  <thead>
-    <tr>
-      <th>Id</th>
-      <th>Description</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let todo of todos">
-      <td>{{todo.id}}</td>
-      <td>{{todo.description}}</td>
-    </tr>
-  </tbody>
-</table>
+<h1>My todo's</h1>
+<div class="container">
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Id</th>
+        <th>Description</th>
+        <th>isDone</th>
+        <th>Date</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let todo of todos">
+        <td>{{ todo.id }}</td>
+        <td>{{ todo.description }}</td>
+        <td>{{ todo.done }}</td>
+        <td>{{ todo.targetDate | date : "dd-MM-y HH:mm" }}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
