--- a/frontend-todo/src/app/login/login.component.html
+++ b/frontend-todo/src/app/login/login.component.html
@@ -1,11 +1,29 @@
-<small *ngIf="invalidLogin">{{errorMessage}}</small>
+<h1>Login!</h1>
+
+<div class="container"></div>
+
+<div class="alert alert-warning" *ngIf="invalidLogin">{{ errorMessage }}</div>
 
 <div>
   <div>
-    <label for="">User Name : </label><input id="username" type="text" name="username" [(ngModel)]="username" (keyup)="handleChanges()">
+    <label for="">User Name : </label
+    ><input
+      id="username"
+      type="text"
+      name="username"
+      [(ngModel)]="username"
+      (keyup)="handleChanges()"
+    />
   </div>
   <div>
-    <label for="">Password : </label><input id="password" type="password" name="password" [(ngModel)]="password" (keyup)="handleChanges()">
+    <label for="">Password : </label
+    ><input
+      id="password"
+      type="password"
+      name="password"
+      [(ngModel)]="password"
+      (keyup)="handleChanges()"
+    />
   </div>
-  <button (click)="handleLogin()">Login</button>
+  <button class="btn btn-primary" (click)="handleLogin()">Login</button>
 </div>
