modified welcoime component

--- a/frontend-todo/src/app/welcome/welcome.component.html
+++ b/frontend-todo/src/app/welcome/welcome.component.html
@@ -1,7 +1,6 @@
-<div>
-  Welcome {{name}}, this is your awesome website.
-</div>
-<div>
-  You can manage your todos <a routerLink="/todos">here</a>
-</div>
+<h1>Welcome!</h1>
 
+<div class="container">
+  Welcome {{ name }}, you can manage your todos
+  <a routerLink="/todos">here</a>
+</div>
