--- a/frontend-todo/src/app/app.component.html
+++ b/frontend-todo/src/app/app.component.html
@@ -1,4 +1,7 @@
-<!-- <app-welcome></app-welcome> -->
+<app-menu></app-menu>
 
-<!-- <app-login></app-login> -->
-<router-outlet></router-outlet>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
+
+<app-footer></app-footer>
