--- a/frontend-todo/src/styles.scss
+++ b/frontend-todo/src/styles.scss
@@ -1,2 +1,2 @@
 /* You can add global styles to this file, and also import other style files */
-@import './bootstrap-v4.1.0.css'
+@import './include/bootstrap-v4.1.0.css';
