--- a/frontend-todo/src/app/list-todos/list-todos.component.html
+++ b/frontend-todo/src/app/list-todos/list-todos.component.html
@@ -1,4 +1,5 @@
 <h1>My todo's</h1>
+<div class="alert alert-success" *ngIf="message">{{ message }}</div>
 <div class="container">
   <table class="table">
     <thead>
@@ -7,6 +8,8 @@
         <th>Description</th>
         <th>isDone</th>
         <th>Date</th>
+        <th></th>
+        <th></th>
       </tr>
     </thead>
     <tbody>
@@ -15,6 +18,16 @@
         <td>{{ todo.description }}</td>
         <td>{{ todo.done }}</td>
         <td>{{ todo.targetDate | date : "dd-MM-y HH:mm" }}</td>
+        <td>
+          <button class="btn btn-success" (click)="updateTodo(todo.id)">
+            Update Todo
+          </button>
+        </td>
+        <td>
+          <button class="btn btn-danger" (click)="deleteTodo(todo.id)">
+            Delete Todo
+          </button>
+        </td>
       </tr>
     </tbody>
   </table>
