added new todo add functionality and new todo comp

--- a/frontend-todo/src/app/list-todos/list-todos.component.html
+++ b/frontend-todo/src/app/list-todos/list-todos.component.html
@@ -19,7 +19,7 @@
         <td>{{ todo.done }}</td>
         <td>{{ todo.targetDate | date : "dd-MM-y HH:mm" }}</td>
         <td>
-          <button class="btn btn-success" (click)="updateTodo(todo.id)">
+          <button class="btn btn-primary" (click)="updateTodo(todo.id)">
             Update Todo
           </button>
         </td>
@@ -31,4 +31,8 @@
       </tr>
     </tbody>
   </table>
+
+  <div class="row">
+    <button class="btn btn-success" (click)="addTodo()">Add Todo</button>
+  </div>
 </div>
