--- a/frontend-todo/src/app/todo/todo.component.html
+++ b/frontend-todo/src/app/todo/todo.component.html
@@ -1,28 +1,46 @@
-<h1>Todo</h1>
+<h1>{{ id > 0 ? "Todo" + id : "New todo" }}</h1>
+<div class="alert alert-success" *ngIf="message">{{ message }}</div>
 <div class="container">
-  <fieldset class="form-group">
-    <label>Description</label>
-    <input
-      *ngIf="todo"
-      [(ngModel)]="todo.description"
-      type="text"
-      class="form-control"
-      name="description"
-      required="required"
-    />
-  </fieldset>
-  <fieldset class="form-group">
-    <label>Target Date</label>
-    <input
-      *ngIf="todo"
-      [ngModel]="todo.targetDate | date : 'yyyy-MM-dd'"
-      (ngModel)="todo.targetDate = $event"
-      type="date"
-      class="form-control"
-      name="targetDate"
-      required="required"
-    />
-  </fieldset>
+  <form (ngSubmit)="todoForm.valid && saveTodo()" #todoForm="ngForm">
+    <fieldset class="form-group">
+      <label>Description</label>
+      <input
+        [(ngModel)]="todo.description"
+        #description="ngModel"
+        type="text"
+        class="form-control"
+        name="description"
+        required="required"
+        minlength="5"
+      />
+      <div
+        class="alert alert-danger"
+        *ngIf="todoForm.dirty && description.invalid"
+      >
+        Enter valid description
+      </div>
+    </fieldset>
+    <fieldset class="form-group">
+      <label>Target Date</label>
+      <input
+        [ngModel]="todo.targetDate | date : 'yyyy-MM-dd'"
+        (ngModel)="todo.targetDate = $event"
+        #targetDate="ngModel"
+        type="date"
+        class="form-control"
+        name="targetDate"
+        required="required"
+      />
+      <div
+        class="alert alert-danger"
+        *ngIf="todoForm.dirty && targetDate.invalid"
+      >
+        Enter valid date
+      </div>
+    </fieldset>
 
-  <button class="btn btn-success" (click)="saveTodo()">Save</button>
+    <button type="submit" [disabled]="todoForm.invalid" class="btn btn-success">
+      Save
+    </button>
+  </form>
 </div>
